feat(html-video-played): add button full screen

--- a/src/app/html-video-player/html-video-player.component.html
+++ b/src/app/html-video-player/html-video-player.component.html
@@ -22,6 +22,8 @@
 
     <button (click)=muteVolume()>Mute</button>
 
+    <button (click)=fullScreen()>FullScreen</button>
+
   </article>
 </section>
 
