--- a/src/app/html-video-player/html-video-player.component.scss
+++ b/src/app/html-video-player/html-video-player.component.scss
@@ -1,3 +1,7 @@
+video::-webkit-media-controls {
+  display:none !important;
+}
+
 .controls {
   progress {
     color: green;
@@ -11,13 +15,18 @@
     vertical-align: middle;
   }
 
-  progress[value]::-webkit-progress-bar {
-    background-color: #434343;
-    border-radius: 2px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+  progress[value] {
+    &::-webkit-progress-bar {
+      background-color: #434343;
+      border-radius: 2px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+    }
+
   }
 
-  progress[value]::-webkit-progress-value {
-    background-color: green;
+  progress[value] {
+    &::-webkit-progress-value {
+      background-color: green;
+    }
   }
 }
