fix(html-video-player): fix click on progress bar after use loop video segment

--- a/src/app/html-video-player/html-video-player.component.html
+++ b/src/app/html-video-player/html-video-player.component.html
@@ -24,6 +24,8 @@
 
     <button (click)=fullScreen()>FullScreen</button>
 
+    <button #loopSegment>LoopVideoSegment</button>
+
   </article>
 </section>
 
