refactor(html-video-player): add symbol play/pause

--- a/src/app/html-video-player/html-video-player.component.html
+++ b/src/app/html-video-player/html-video-player.component.html
@@ -12,7 +12,7 @@
 
     <figcaption class="controls">
 
-      <button #playPause>></button>
+      <button #playPause>►</button>
       <progress
         #progressBar
         id="progress"
