refactor(html-video-player): rename varialbe and methods on understandable

--- a/src/app/html-video-player/html-video-player.component.html
+++ b/src/app/html-video-player/html-video-player.component.html
@@ -13,11 +13,11 @@
 
       <button #playPause>►</button>
       <progress
-        #progressBar
-        id="progress"
+        #progressVideoBar
+        class="progressVideoBar"
         max="100"
-        [value]="progressBarValue"
-        (click)="seek($event)"
+        [value]="progressVideoBarValue"
+        (click)="seekProgressVideoValue($event)"
       ></progress>
 
       <button (click)=muteVolume()>Mute</button>
