--- a/src/app/html-video-player/html-video-player.component.scss
+++ b/src/app/html-video-player/html-video-player.component.scss
@@ -1,3 +1,20 @@
+video {
+  &::-webkit-media-controls{
+    display:none !important;
+  }
+}
+video {
+  &::-webkit-media-controls-enclosure{
+    display:none !important;
+  }
+}
+
+.controls:fullscreen {
+  display: flex !important;
+  position: fixed !important;
+  z-index: 2147483647 !important;
+}
+
 .controls {
   .progressBarVideo {
     width: 510px;
