--- a/src/app/html-video-player/html-video-player.component.scss
+++ b/src/app/html-video-player/html-video-player.component.scss
@@ -41,6 +41,22 @@ video {
   }
 }
 
+.containerFullScreen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  .videoFullScreen {
+    width: 100%;
+    height: 100%;
+  }
+
+  .controlsFullScreen {
+    width: 100%;
+  }
+}
+
 input[type="range"] {
   cursor: pointer;
 }
