feat(html-video-player): add output current time

--- a/src/app/html-video-player/html-video-player.component.html
+++ b/src/app/html-video-player/html-video-player.component.html
@@ -32,7 +32,7 @@
           </button>
 
           <div>
-            {{duration}}
+            {{currentTime}} / {{duration}}
           </div>
 
           <button class="btn-controls" (click)=muteVolume()>
