fix(html-video-player): remove binding with button play and change on wait init video duration

--- a/src/app/html-video-player/html-video-player.component.html
+++ b/src/app/html-video-player/html-video-player.component.html
@@ -32,7 +32,7 @@
           </button>
 
           <div class="control-time">
-            <ng-container *ngIf="isPlay">
+            <ng-container *ngIf="duration.length">
               {{currentTime}} / {{duration}}
             </ng-container>
           </div>
