--- a/src/app/html-video-player/html-video-player.component.scss
+++ b/src/app/html-video-player/html-video-player.component.scss
@@ -18,7 +18,7 @@ video {
       margin-bottom: 5px;
       border: none;
       vertical-align: middle;
-      color: #0075ff;
+      background: #0075ff;
     }
 
     .progress-bar-video[value] {
