--- a/src/app/html-video-player/html-video-player.component.scss
+++ b/src/app/html-video-player/html-video-player.component.scss
@@ -39,15 +39,29 @@ video {
     display: flex;
     justify-content: space-between;
 
-    .btn-controls {
+    .btn-controls, .btn-popup-controls {
       display: flex;
       justify-content: center;
-      width: 25px;
       padding: unset;
       border: none;
       background: none;
       outline: none;
       cursor: pointer;
+    }
+
+    .btn-controls {
+      width: 25px;
+    }
+
+    .btn-popup-controls {
+      width: 100%;
+      height: 35px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+
+    .btn-bottom-border {
+      border-bottom: 1px solid #626767;
     }
 
     .control-play-pause-volume {
@@ -56,7 +70,7 @@ video {
     }
 
     .control-time {
-      width: 100px;
+      width: 85px;
       font-size: 14px;
       color: #0075ff;
     }
@@ -75,20 +89,30 @@ video {
 
         .other-controls-hidden {
           display: none;
+
+          .container-zoom {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+          }
+
+          .btn-increase-zoom {
+            border-right: 1px solid black;
+          }
         }
 
         .popupOtherControls {
           display: flex;
           justify-content: center;
           align-items: center;
+          flex-direction: column-reverse;
           position: absolute;
-          width: 40px;
-          top: -80px;
-          right: 10px;
-          padding: 10px;
-          background-color: #d1f2f8;;
+          width: 100px;
+          top: -93px;
+          right: 0;
+          background-color: #d1f2f8;
           border: 1px solid #acbec4;
-          text-align: center;
         }
       }
     }
@@ -96,23 +120,23 @@ video {
 }
 
 .containerFullScreen {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
 
-  .videoFullScreen {
-    width: 100%;
-    height: 100%;
-  }
+.videoFullScreen {
+width: 100%;
+height: 100%;
+}
 
-  .controlsFullScreen {
-    width: 100%;
-    margin-bottom: 15px;
-  }
+.controlsFullScreen {
+width: 100%;
+margin-bottom: 15px;
+}
 }
 
 input[type="range"] {
-  cursor: pointer;
-  margin: unset;
+cursor: pointer;
+margin: unset;
 }
